Updated modified files

--- a/housing/src/main/java/com/example/housing/pom.xml
+++ b/housing/src/main/java/com/example/housing/pom.xml
@@ -37,9 +37,15 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -47,6 +53,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.example.housing.Main</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
