--- a/HousingLibrary/src/main/resources/application.properties
+++ b/HousingLibrary/src/main/resources/application.properties
@@ -45,6 +45,11 @@ spring.flyway.password=
 #spring.security.user.name=user
 #spring.security.user.password=abc123
 
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+
 
 
 
